# ipfs-video-index

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  deploy.sh  docker-compose.yml  production.yml  pyproject.toml  run_api.sh  run_indexer.sh
ipfs_video_index/: api.py  database.py
ipfs_video_index/ipfs_indexer/: __main__.py  procs.py
tests/: test_ipfs_indexer.py  test_procs.py
